// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-0"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly X axis label rotation 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-11"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly width horizontal grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-9"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly width vertical grid 1`] = `
.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(220,220,220);
}

.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-10"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="grid c1"
    />
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with a different line type 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-5"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with bars and lines 1`] = `
.c8 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c10 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c7 {
  fill: none;
  pointer-events: none;
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c9 {
  fill: none;
  pointer-events: none;
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c1 {
  fill: rgb(44,98,122);
  height: 259.4117647058824px;
  width: 187.92282635930843px;
}

.c1:hover {
  fill: hsl(198.5,47%,26%);
}

.c2 {
  fill: rgb(44,98,122);
  height: 201.76470588235293px;
  width: 187.92282635930843px;
}

.c2:hover {
  fill: hsl(198.5,47%,26%);
}

.c3 {
  fill: rgb(44,98,122);
  height: 245px;
  width: 187.92282635930843px;
}

.c3:hover {
  fill: hsl(198.5,47%,26%);
}

.c4 {
  fill: rgb(166,224,251);
  height: 230.58823529411768px;
  width: 187.92282635930843px;
}

.c4:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c5 {
  fill: rgb(166,224,251);
  height: 201.76470588235293px;
  width: 187.92282635930843px;
}

.c5:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c6 {
  fill: rgb(166,224,251);
  height: 187.3529411764706px;
  width: 187.92282635930843px;
}

.c6:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-4"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
    <g
      className="apples-layer"
    >
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 259.4117647058824,
            "width": 187.92282635930843,
          }
        }
        value={18}
        x={31.25}
        y={230.58823529411762}
      />
      <rect
        className="bar c2"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 201.76470588235293,
            "width": 187.92282635930843,
          }
        }
        value={14}
        x={248.25}
        y={288.2352941176471}
      />
      <rect
        className="bar c3"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 245,
            "width": 187.92282635930843,
          }
        }
        value={17}
        x={464.25}
        y={245}
      />
      <rect
        className="bar c2"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 201.76470588235293,
            "width": 187.92282635930843,
          }
        }
        value={14}
        x={681.25}
        y={288.2352941176471}
      />
    </g>
    <g
      className="bananas-layer"
    >
      <rect
        className="bar c4"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 230.58823529411768,
            "width": 187.92282635930843,
          }
        }
        value={16}
        x={31.25}
        y={0}
      />
      <rect
        className="bar c5"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 201.76470588235293,
            "width": 187.92282635930843,
          }
        }
        value={14}
        x={248.25}
        y={86.47058823529414}
      />
      <rect
        className="bar c6"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 187.3529411764706,
            "width": 187.92282635930843,
          }
        }
        value={13}
        x={464.25}
        y={57.64705882352945}
      />
      <rect
        className="bar c6"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 187.3529411764706,
            "width": 187.92282635930843,
          }
        }
        value={13}
        x={681.25}
        y={100.88235294117652}
      />
    </g>
    <g
      className="cherries-layer"
    >
      <path
        className="line-path c7"
        color="rgb(127, 22, 42)"
        d="M125,245L342,216.1764705882353L558,230.58823529411762L775,461.1764705882353"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c8"
          color="rgb(127, 22, 42)"
          cx={125}
          cy={245}
          r={5}
        />
        <circle
          className="line-dot c8"
          color="rgb(127, 22, 42)"
          cx={342}
          cy={216.1764705882353}
          r={5}
        />
        <circle
          className="line-dot c8"
          color="rgb(127, 22, 42)"
          cx={558}
          cy={230.58823529411762}
          r={5}
        />
        <circle
          className="line-dot c8"
          color="rgb(127, 22, 42)"
          cx={775}
          cy={461.1764705882353}
          r={5}
        />
      </g>
    </g>
    <g
      className="dates-layer"
    >
      <path
        className="line-path c9"
        color="rgb(255, 121, 147)"
        d="M125,475.5882352941176L342,273.82352941176475L558,360.2941176470588L775,302.6470588235294"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c10"
          color="rgb(255, 121, 147)"
          cx={125}
          cy={475.5882352941176}
          r={5}
        />
        <circle
          className="line-dot c10"
          color="rgb(255, 121, 147)"
          cx={342}
          cy={273.82352941176475}
          r={5}
        />
        <circle
          className="line-dot c10"
          color="rgb(255, 121, 147)"
          cx={558}
          cy={360.2941176470588}
          r={5}
        />
        <circle
          className="line-dot c10"
          color="rgb(255, 121, 147)"
          cx={775}
          cy={302.6470588235294}
          r={5}
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with curveBundle line type 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-6"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with curveBundle line type 2`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-7"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with curveBundle line type 3`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-8"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with dates as name 1`] = `
.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-1"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
  </g>
</svg>
`;

exports[`Should render correctly with only bars 1`] = `
.c1 {
  fill: rgb(44,98,122);
  height: 259.4117647058824px;
  width: 181.73076923076923px;
}

.c1:hover {
  fill: hsl(198.5,47%,26%);
}

.c2 {
  fill: rgb(44,98,122);
  height: 201.76470588235293px;
  width: 181.73076923076923px;
}

.c2:hover {
  fill: hsl(198.5,47%,26%);
}

.c3 {
  fill: rgb(44,98,122);
  height: 245px;
  width: 181.73076923076923px;
}

.c3:hover {
  fill: hsl(198.5,47%,26%);
}

.c4 {
  fill: rgb(166,224,251);
  height: 230.58823529411768px;
  width: 181.73076923076923px;
}

.c4:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c5 {
  fill: rgb(166,224,251);
  height: 201.76470588235293px;
  width: 181.73076923076923px;
}

.c5:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c6 {
  fill: rgb(166,224,251);
  height: 187.3529411764706px;
  width: 181.73076923076923px;
}

.c6:hover {
  fill: hsl(199.10000000000002,91.4%,65.4%);
}

.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-2"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
    <g
      className="apples-layer"
    >
      <rect
        className="bar c1"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 259.4117647058824,
            "width": 181.73076923076923,
          }
        }
        value={18}
        x={34.61538461538464}
        y={230.58823529411762}
      />
      <rect
        className="bar c2"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 201.76470588235293,
            "width": 181.73076923076923,
          }
        }
        value={14}
        x={250.96153846153848}
        y={288.2352941176471}
      />
      <rect
        className="bar c3"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 245,
            "width": 181.73076923076923,
          }
        }
        value={17}
        x={467.3076923076923}
        y={245}
      />
      <rect
        className="bar c2"
        color="rgb(44, 98, 122)"
        onClick={[Function]}
        size={
          Object {
            "height": 201.76470588235293,
            "width": 181.73076923076923,
          }
        }
        value={14}
        x={683.6538461538462}
        y={288.2352941176471}
      />
    </g>
    <g
      className="bananas-layer"
    >
      <rect
        className="bar c4"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 230.58823529411768,
            "width": 181.73076923076923,
          }
        }
        value={16}
        x={34.61538461538464}
        y={0}
      />
      <rect
        className="bar c5"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 201.76470588235293,
            "width": 181.73076923076923,
          }
        }
        value={14}
        x={250.96153846153848}
        y={86.47058823529414}
      />
      <rect
        className="bar c6"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 187.3529411764706,
            "width": 181.73076923076923,
          }
        }
        value={13}
        x={467.3076923076923}
        y={57.64705882352945}
      />
      <rect
        className="bar c6"
        color="rgb(166, 224, 251)"
        onClick={[Function]}
        size={
          Object {
            "height": 187.3529411764706,
            "width": 181.73076923076923,
          }
        }
        value={13}
        x={683.6538461538462}
        y={100.88235294117652}
      />
    </g>
  </g>
</svg>
`;

exports[`Should render correctly with only lines 1`] = `
.c2 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c4 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c1 {
  fill: none;
  pointer-events: none;
  stroke: rgb(127,22,42);
  stroke-width: 3;
}

.c3 {
  fill: none;
  pointer-events: none;
  stroke: rgb(255,121,147);
  stroke-width: 3;
}

.c0 {
  height: 540px;
  width: 960px;
}

<svg
  className="silky-charts c0"
  id="silky-charts-bar-line-3"
  size={
    Object {
      "height": 540,
      "width": 960,
    }
  }
>
  <g
    className="container"
    transform="translate(40, 20)"
  >
    <g
      className="axis-x "
      transform="translate(0, 490)"
    />
    <g
      className="axis-y "
    />
    <g
      className="cherries-layer"
    >
      <path
        className="line-path c1"
        color="rgb(127, 22, 42)"
        d="M125.48076923076925,51.57894736842104L341.8269230769231,0L558.1730769230769,25.789473684210577L774.5192307692308,438.42105263157896"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={125.48076923076925}
          cy={51.57894736842104}
          r={5}
        />
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={341.8269230769231}
          cy={0}
          r={5}
        />
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={558.1730769230769}
          cy={25.789473684210577}
          r={5}
        />
        <circle
          className="line-dot c2"
          color="rgb(127, 22, 42)"
          cx={774.5192307692308}
          cy={438.42105263157896}
          r={5}
        />
      </g>
    </g>
    <g
      className="dates-layer"
    >
      <path
        className="line-path c3"
        color="rgb(255, 121, 147)"
        d="M125.48076923076925,464.2105263157895L341.8269230769231,103.15789473684208L558.1730769230769,257.8947368421053L774.5192307692308,154.73684210526312"
      />
      <g
        className="line-dot-group"
      >
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={125.48076923076925}
          cy={464.2105263157895}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={341.8269230769231}
          cy={103.15789473684208}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={558.1730769230769}
          cy={257.8947368421053}
          r={5}
        />
        <circle
          className="line-dot c4"
          color="rgb(255, 121, 147)"
          cx={774.5192307692308}
          cy={154.73684210526312}
          r={5}
        />
      </g>
    </g>
  </g>
</svg>
`;
